<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/paymentFragment">

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.panda_erkan.zvtclientdemo.ui.payment.PaymentFragment"
        android:label="@string/nav_payment" />

    <fragment
        android:id="@+id/terminalFragment"
        android:name="com.panda_erkan.zvtclientdemo.ui.terminal.TerminalFragment"
        android:label="@string/nav_terminal" />

    <fragment
        android:id="@+id/logFragment"
        android:name="com.panda_erkan.zvtclientdemo.ui.log.LogFragment"
        android:label="@string/nav_log" />
</navigation>
